# ieee-workshop-experimentos-ml

./: _quarto.yml  index.qmd
.quarto/_freeze/notes/dia1_disenio_experimento/execute-results/: html.json
.quarto/_freeze/notes/dia4_documentacion_comunicacion/execute-results/: html.json
.quarto/cites/: index.json
.quarto/idx/: index.qmd.json
.quarto/idx/notes/: dia1_disenio_experimento.qmd.json  dia2_infraestructura_entrenamiento.qmd.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: 6a0d4fe5  9a05d6de  INDEX  f48ff665  fc6c62a0  fdb80dd2
docs/: index.html  search.json
docs/notes/: dia1_disenio_experimento.html
docs/site_libs/bootstrap/: bootstrap-6a3675c0e035c7c845d48363a35eb454.min.css  bootstrap-9f0f020be4abe86539a877cbaec1f5e7.min.css  bootstrap-dark-1bd9a56c53b585a40e40efa81078fb21.min.css
docs/slides/: dia1_slides.html  dia1_slides.qmd  dia3_slides.html  dia3_slides.qmd  dia4_slides.html  dia4_slides.qmd  references.bib  unam-theme.scss
docs/slides/day2_metrics/: diagnostics.json  seed_sensitivity.json  sweep_results.json  val_metrics.json
materials/day4_quarto/: README.md  dvc.yaml  pyproject.toml  requirements.txt
materials/day4_quarto/configs/: baseline.yaml  default.yaml
materials/day4_quarto/docs/: instructor_guide.md
materials/day4_quarto/quarto/: _quarto.yml  index.qmd  paper.qmd  presentation.qmd  references.bib  slides.qmd
materials/day4_quarto/quarto/docs/: index.html  paper.html  presentation.html  readme.html  search.json
materials/day4_quarto/quarto/docs/sections/: discussion.html  intro.html  methodology.html  results.html
materials/day4_quarto/quarto/sections/: discussion.qmd  intro.qmd  methodology.qmd  results.qmd
materials/day4_quarto/scripts/: evaluate.py  train.py
materials/day4_quarto/src/data/: dataset.py
materials/day4_quarto/src/evaluation/: metrics.py
materials/day4_quarto/src/models/: logistic.py
materials/day4_quarto/src/training/: config.py  trainer.py
materials/day4_quarto/tests/: test_model.py  test_pipeline.py
materials/pneumonia_project_instructor/: INSTRUCTOR_SETUP.md  README.md  dvc.yaml  pyproject.toml  requirements.txt
materials/pneumonia_project_instructor/configs/: baseline.yaml  default.yaml  exercise_freeze_off.yaml  exercise_lr_high.yaml  exercise_wpos_high.yaml
materials/pneumonia_project_instructor/quarto/: custom.css  references.bib  slides.qmd
materials/pneumonia_project_instructor/scripts/: evaluate.py  instructor_demo.py  train.py
materials/pneumonia_project_instructor/src/data/: dataset.py
materials/pneumonia_project_instructor/src/evaluation/: metrics.py
materials/pneumonia_project_instructor/src/models/: resnet.py
materials/pneumonia_project_instructor/src/training/: config.py  trainer.py
materials/pneumonia_project_instructor/tests/: test_model.py  test_pipeline.py
notes/: dia1_disenio_experimento.qmd  dia2_infraestructura_entrenamiento.qmd  dia3_reproducibilidad_evaluacion.qmd  dia4_documentacion_comunicacion.qmd  references.bib
slides/: dia2_slides.html  dia2_slides.qmd  dia3_slides.html  dia3_slides.qmd  dia4_slides.html  dia4_slides.qmd
slides/day2_metrics/: logistic_coefficients.csv  test_metrics.json  threshold_tuning.json
